# ask-luchetu

./: .env.example  .gitignore  pyproject.toml
src/ask_luchetu/: config.py  context.py
src/ask_luchetu/models/: deepseek.py  interface.py  ollama.py  provider.py
src/ask_luchetu/tools/: __init__.py  tool.py
src/ask_luchetu/utils/: messages.py
