[project]
name = "ask-luchetu"
version = "0.1.0"
description = "The AI service powering ask.luchetu.com — chat, RAG over blog content, memory, and agent loop"
readme = "README.md"
authors = [
    { name = "luchetu", email = "humluchetu@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=2.0.0",
    "google-genai>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_luchetu"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/ask_luchetu/evals"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
